name:                hmac
version:             0.1.0
synopsis:            HMAC Library
description:         Hash-Based Message Authentication Code Library based on
                     OAuth2 & https://confluence.amgencss.fpcomplete.com/x/lwAQ
homepage:            http://github.com/fpco/hmac
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@fpcomplete.com
copyright:           FP Complete
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     Network.HMAC
                       Network.HMAC.Parse
                       Network.HMAC.Types
  hs-source-dirs:      src
  build-depends:       aeson
                     , attoparsec
                     , base >=4.8 && <4.9
                     , bytestring
                     , bytestring
                     , conduit
                     , cryptohash
                     , http-conduit
                     , http-types
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , wai

test-suite test
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , hmac
                     , hspec
                     , hspec-attoparsec
                     , tasty
                     , tasty-hspec
